# tsmixer

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  config.json  index.html  pyproject.toml  requirements.txt
.github/: labeler.yml
.github/workflows/: code_quality_control.yml  cos_integration.yml  docker-test.yml  docs.yml  lints.yml  pr_request_checks.yml  pylint.yml
architecture/: index.html
data/: SPX.csv
demos/: index.html
design/: index.html
docs/: architecture.md  demos.md  prd.md
docs/examples/: index.md
examples/: index.html
faq/: index.html
flywheel/: index.html
hiring/: index.html
metric/: index.html
purpose/: index.html
research/: index.html
roadmap/: index.html
scripts/: data_split.py
search/: search_index.json
tests/: __init__.py  data_gen.py  test_data_gen.py  test_data_load.py  test_main.py  test_tsmixer.py
tests/data/: test_data_split.py
tests/data/fin_preprocess/: prep.py
tests/integration/: test_integration.py
tests/performance/: __init__.py
tests/unit/: unit_test.py
tsmixer/: __init__.py  data_gen.py  data_load.py  data_url.py  main.py  tsmixer.py
