[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "paper"
version = "0.0.1"
description = "TSMixer - Pytorch"
license = "MIT"
authors = ["Evelyn Mitchell <efmphone@gmail.com"]
homepage = "https://github.com/evelynmmitchell/tsmixer"
documentation = "https://github.com/evelynmitchell/tsmixer"  # Add this if you have documentation.
readme = "README.md"  
repository = "https://github.com/evelynmitchell/tsmixer"
keywords = ["time series", "multivariate", "forecasting","artificial intelligence", "deep learning", "optimizers", "Prompt Engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.3.3"
numpy = "^1.21.2"
torch = "^1.9.1"
datasets = "^1.12.1"



[tool.poetry.dev-dependencies]
ruff = "^0.1.6"
flake8 = "*"
pytest = "*"
pylint = "*"
black = "*"
torchfix = "*"
numpy = "*"
deptry = "*"


[tool.poetry.group.lint.dependencies]
ruff = "^0.1.6"
types-toml = "^0.10.8.1"
types-redis = "^4.3.21.6"
types-pytz = "^2023.3.0.0"
black = "^23.1.0"
types-chardet = "^5.0.4.6"
mypy-protobuf = "^3.0.0"


[tool.autopep8]
max_line_length = 80
ignore = "E501,W6"  # or ["E501", "W6"]
in-place = true
recursive = true
aggressive = 3


[tool.ruff]
line-length = 70

[tool.black]
line-length = 70
target-version = ['py38']
preview = true
