[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "paper"
version = "0.0.2"
description = "TSMixer - Pytorch"
license = "MIT"
authors = ["Evelyn Mitchell <efmphone@gmail.com"]
homepage = "https://github.com/evelynmmitchell/tsmixer"
documentation = "https://github.com/evelynmitchell/tsmixer"  # Add this if you have documentation.
readme = "README.md"  
repository = "https://github.com/evelynmitchell/tsmixer"
keywords = ["time series", "multivariate", "forecasting","artificial intelligence", "deep learning", "optimizers", "Prompt Engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10"
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "platform_system != 'Darwin'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "platform_system != 'Darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^2.1.3"
torch = "^2.3.1"
datasets = "^3.0.0"
scipy = "^1.13.1"
safetensors = "^0.4.3"
gluonts = "^0.16.0"
astroid = "*"
platformdirs = "*"

[tool.poetry.dev-dependencies]
ruff = "^0.8.0"
flake8 = "*"
pytest = "*"
pylint = "*"
black = "*"
torchfix = "*"
numpy = "*"
deptry = "*"
autopep8 = "*"
mkdocs-glightbox = "*"


[tool.poetry.group.lint.dependencies]
ruff = "^0.8.0"
types-toml = "^0.10.8.1"
types-redis = "^4.3.21.6"
types-pytz = "^2024.1.0.20240417"
black = "^24.4.2"
types-chardet = "^5.0.4.6"
mypy-protobuf = "^3.0.0"


[tool.autopep8]
max_line_length = 80
ignore = "E501,W6"  # or ["E501", "W6"]
in-place = true
recursive = true
aggressive = 3


[tool.ruff]
line-length = 70

[tool.black]
line-length = 70
target-version = ['py38']
preview = true
